--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -9,5 +9,15 @@
       "rocky": "Planète rocheuse",
       "volcanic": "Planète volcanique"
     }
+  },
+  "registration": {
+    "next_step": "Étape suivante",
+    "validate": "Commencer la partie !",
+    "faction": {
+      "title": "Choisissez votre faction !"
+    },
+    "planet": {
+      "title": "Choisissez votre planète !"
+    }
   }
 }
