Implement pictograms in planet resources list

--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -9,7 +9,8 @@
       "tropical": "Planète tropicale",
       "rocky": "Planète rocheuse",
       "volcanic": "Planète volcanique"
-    }
+    },
+    "resources": "Ressources"
   },
   "profile": {
     "planets": {
