Implement player profile visibility and faction view

--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -15,6 +15,11 @@
       }
     }
   },
+  "faction": {
+    "members": {
+        "title": "Membres"
+    }
+  },
   "planet": {
     "system": "Système",
     "type": {
