Implement faction relations and navigation to other factions panels

--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -28,6 +28,9 @@
     "faction": {
         "members": {
             "title": "Membres"
+        },
+        "relations": {
+            "title": "Relations Diplomatiques"
         }
     },
     "planet": {
