--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -152,10 +152,16 @@
     "fleet" :{
         "view" :{
             "all" :{
-                "title" : "Flottes sous votre commandement"
+                "title" : "Flottes sous votre commandement",
+                "on_planet" : "Sationée sur %planet%",
+                "on_journey" : "Erreur : Pas encore implémenté"
             },
             "planet" :{
-                "title" : "Flottes sous votre commandement"
+                "title" : "Flottes sous votre commandement",
+                "on_planet" : "Sationée sur %planet%",
+                "on_journey" : "Erreur : La flottes et en chemin",
+                "no_fleet" : "Vous n'avez pas de flottes ici.",
+                "create" : "Créer un nouvelle flotte sur %planet%"
             }
         }
     }
