--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -154,7 +154,9 @@
             "all" :{
                 "title" : "Flottes sous votre commandement",
                 "on_planet" : "Stationnée sur %planet%",
-                "on_journey" : "Erreur : Pas encore implémenté"
+                "on_journey" : "Erreur : Pas encore implémenté",
+                "error_showing_fleet" : "Une erreur c'est produite, la flotte ne peut pas être affiché.",
+                "no_fleet" : "Vous n'avez pas de flottes."
             },
             "planet" :{
                 "title" : "Flottes sous votre commandement",
