change display fleet into a table

--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -165,7 +165,9 @@
                 "no_fleet" : "Vous n'avez pas de flottes ici.",
                 "error_showing_fleet" : "Une erreur c'est produite, la flotte ne peut pas être affiché.",
                 "create" : "Créer un nouvelle flotte sur %planet%"
-            }
+            },
+            "header_location" :"Position",
+            "header_id" : "Identification"
         }
     }
 }
