--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -184,7 +184,13 @@
                 "ships_in_hangar" : "Vaisseaux dans le hangar",
                 "no_ship_hangar" : "Il n'y a pas de vaisseau dans le hangar",
                 "no_ship_fleet" : "Il n'y a pas de vaisseau dans la flotte",
-                "transfer" : "Transferer"
+                "transfer" : "Transferer",
+                "error" : {
+                    "need_positive_number" : "Vous ne pouvez pas transfer un nombre négatif de vaisseau",
+                    "model_id_NaN" : "Le model ne peut pas être lu. Veuillez recharger la page.",
+                    "no_ships_with_model" : "Il n'y a pas de vaisseau avec ce model. Veuillez recharger la page.",
+                    "not_enough_ship" : "Vous n'avez pas assez de vaisseaux pour exécuter ce transfer."
+                }
             },
             "header_location" :"Position",
             "header_id" : "Identification"
