--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -162,6 +162,22 @@
             "map": "Retour à la carte"
         }
     },
+    "trade": {
+        "authorized_factions": "Factions acceptées",
+        "available_quantity": "%quantity% disponible",
+        "available_lots": "%nb_lots% lots max",
+        "create_offer": "Créer une offre",
+        "discount": "Prix réduit",
+        "invalid_lot_quantity": "il ne peut y avoir de reste",
+        "lot_quantity": "Quantité minimale par lot",
+        "min": "min",
+        "max": "max",
+        "price": "Prix de départ",
+        "quantity": "Quantité",
+        "unauthorized_factions": "Factions rejetées",
+        "unique_available_lot": "un seul lot disponible",
+        "unit_short": "u"
+    },
     "fleet" :{
         "view" :{
             "all" :{
