--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -177,6 +177,7 @@
         "price": "Prix de départ",
         "quantity": "Quantité",
         "transport": "Transport et Escorte",
+        "trading_post": "Comptoir commercial",
         "unauthorized_factions": "Factions rejetées",
         "unique_available_lot": "un seul lot disponible",
         "unit_short": "u"
