--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -168,12 +168,15 @@
         "available_lots": "%nb_lots% lots max",
         "create_offer": "Créer une offre",
         "discount": "Prix réduit",
+        "good": "Bien",
         "invalid_lot_quantity": "il ne peut y avoir de reste",
         "lot_quantity": "Quantité minimale par lot",
         "min": "min",
         "max": "max",
+        "offer": "Offre",
         "price": "Prix de départ",
         "quantity": "Quantité",
+        "transport": "Transport et Escorte",
         "unauthorized_factions": "Factions rejetées",
         "unique_available_lot": "un seul lot disponible",
         "unit_short": "u"
