rename map/journey-planed into map/index and deleted old map/index and corrections

--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -238,7 +238,7 @@
         "number" : "Nombre",
         "name" : "Nom"
     },
-    "jouney" : {
+    "journey" : {
         "planer" : {
             "title" : "Info sur le trajet.",
             "estimated_time" : "temps estimé du voyage : ",
