Implement cancel button for offers

--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -170,6 +170,7 @@
         "available_quantity": "%quantity% disponible",
         "available_lots": "Lots disponibles",
         "buyer": "Acheteur",
+        "cancel_offer": "Annuler l'offre",
         "create_offer": "Créer une offre",
         "discount": "Prix réduit",
         "faction": "Faction",
