Implement planets list for system view

--- a/static/translations/fr.json
+++ b/static/translations/fr.json
@@ -168,6 +168,7 @@
         }
     },
     "system": {
+        "title": "Système stellaire",
         "links": {
             "map": "Retour à la carte"
         }
@@ -251,7 +252,9 @@
     },
     "general" : {
         "number" : "Nombre",
-        "name" : "Nom"
+        "name" : "Nom",
+        "player": "Joueur",
+        "faction": "Faction"
     },
     "journey" : {
         "planer" : {
