Implement offer acceptation

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -182,10 +182,13 @@
         "authorized_factions": "Factions acceptées",
         "available_quantity": "%quantity% disponible",
         "available_lots": "Lots disponibles",
-        "buyer": "Acheteur",
+        "female_buyer": "Acheteuse",
+        "male_buyer": "Acheteur",
+        "accept_offer": "Accepter l'offre",
         "cancel_offer": "Annuler l'offre",
         "create_offer": "Créer une offre",
         "discount": "Prix réduit",
+        "excessing_resource": "Excédent de ressource",
         "faction": "Faction",
         "good": "Bien",
         "invalid_lot_quantity": "il ne peut y avoir de reste",
@@ -208,7 +211,9 @@
         "race": "Race",
         "sales": "Ventes",
         "selected_offer": "Offre sélectionnée",
-        "seller": "Vendeur",
+        "female_seller": "Vendeuse",
+        "male_seller": "Vendeur",
+        "stock": "Stock",
         "trading_post": "Comptoir commercial",
         "transport": "Transport et Escorte",
         "types": {
