--- a/locales/fr.json
+++ b/locales/fr.json
@@ -274,12 +274,25 @@
         }
     },
     "journey" : {
+        "planet_order": "{order} sur {planet}",
+        "orders": {
+            "pass": {
+                "title": "Stationnement",
+                "description": "La flotte effectue le refroidissement de ses propulseurs avant de repartir ou de stationner aux coordonnées indiquées. Si une flotte ennemie est présente, le combat sera livré. La flotte n'adoptera pas de comportement offensif envers les flottes neutres."
+            },
+            "conquer": {
+                "title": "Conquéte",
+                "description": "La flotte combat pour s'emparer de la planète, et attaquera toute flotte désirant l'en empêcher. La conquête militaire détériorera grandement vos rapports avec la population de cette planète, et aussi avec les propriétaires des flottes l'ayant défendue, surtout si elles étaient neutres vis-à-vis de vous."
+            }
+        },
         "planer" : {
-            "title" : "Info sur le trajet.",
+            "cancel_order": "Annuler",
+            "confirm_order": "Confirmer l'ordre",
+            "empty_steps": "Cliquez sur une planète ou sur la carte pour ajouter une étape",
             "estimated_time" : "temps estimé du voyage : ",
             "no_time" : "0h 00m 00s",
-            "send_fleet" : "Commencer le voyage.",
-            "remove_last_step" : "Annuler l'étape."
+            "send_fleet" : "Envoyer",
+            "remove_last_step" : "Annuler l'étape"
         }
     },
     "total": "Total"
