--- a/locales/fr.json
+++ b/locales/fr.json
@@ -268,6 +268,15 @@
         "player": "Joueur",
         "faction": "Faction"
     },
+    "notifications": {
+        "military": {
+            "fleet_victory": "<header><h4>Victoire !</h4></header><section><p>La <span class='link' data-link='/fleets/{fleet__id}'>flotte {fleet__id}</span> a vaincu au combat une flotte de <span class='link' data-link='/player/{opponent__player__id}'>{opponent__player__pseudo}</span> de la faction <span class='link' data-link='/faction/{opponent__player__faction__id}'>{opponent__player__faction__name}</span></p></section><footer><span class='link' data-link='/combats/{report__id}'>Voir le rapport</span></footer>",
+            "fleet_defeat": "<header><h4>Défaite !</h4></header><section><p>La flotte {fleet__id} a été vaincue au combat par une flotte de <span class='link' data-link='/player/{opponent__player__id}'>{opponent__player__pseudo}</span> de la faction <span class='link' data-link='/faction/{opponent__player__faction__id}'>{opponent__player__faction__name}</span></p></section><footer><span class='link' data-link='/combats/{report__id}'>Voir le rapport</span></footer>"
+        },
+        "trade": {
+            "accepted_offer": "<header><h4>Votre offre</h4></header><section><p>Le gouverneur <span class='link' data-link='/player/{player__id}'>{player__pseudo}</span> de la faction <span class='link' data-link='/faction/{player__faction__id}'>{player__faction__name}</span> vous a acheté {quantity} unités pour un prix de {price}</p></section>"
+        }
+    },
     "player": {
         "titles": {
             "governor": "Gouverneur"
