Implement faction motion creation

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -36,6 +36,9 @@
         }
     },
     "faction": {
+        "regimes": {
+            "1": "République à Démocratie Directe"
+        },
         "members": {
             "title": "Membres"
         },
