--- a/locales/fr.json
+++ b/locales/fr.json
@@ -43,10 +43,18 @@
             "title": "Membres"
         },
         "motions": {
+            "create": "Créer une motion",
+            "creation_wording": "Vous pouvez créer une motion au sein de votre faction. Cette motion sera ensuite soumise au vote de l'ensemble des membres. Si elle est acceptée, alors la mesure proposée sera appliquée.",
+            "currently_voting": "Une motion est déjà en cours à ce sujet",
+            "send": "Lancer la motion",
+            "type": "Sujet de la motion",
             "types": {
                 "planet_taxes": {
                     "title": "Taxes planétaires",
                     "description": "<p>Les impôts de faction sont une précieuse source de revenus, permettant de financer le fonctionnement de la faction etl'application des mesures prises.</p><p>Cette motion vise à ajuster le niveau de prélèvements par rotation stellaire à <strong>{taxes} crédits</strong>.</p>"
+                },
+                "regime": {
+                    "title": "Régime politique"
                 }
             }
         },
